<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.diariodobebe.ui.main_activity.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/nav_premium"
        android:name="com.diariodobebe.ui.main_activity.premium.PremiumFragment"
        android:label="@string/menu_premium"
        tools:layout="@layout/fragment_premium" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.diariodobebe.ui.main_activity.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_blog"
        android:name="com.diariodobebe.ui.main_activity.blog.BlogFragment"
        android:label="@string/menu_web"
        tools:layout="@layout/blog_fragment" />

    <fragment
        android:id="@+id/nav_sleep_report"
        android:name="com.diariodobebe.ui.main_activity.report.ReportFragment"
        android:label="@string/sleep_report"
        tools:layout="@layout/fragment_report" />


    <dialog
        android:id="@+id/nav_rate"
        android:name="com.diariodobebe.ui.dialogs.ReviewDialog"
        android:label="@string/menu_rate"
        app:route="@string/menu_rate" />


</navigation>